fix: create/edit organization footer spacing

--- a/client/src/app/components/manage-organizations/create-organization/organization.component.scss
+++ b/client/src/app/components/manage-organizations/create-organization/organization.component.scss
@@ -45,6 +45,7 @@ mat-label {
 
 .center-aligned {
   text-align: center;
+  padding-bottom: 50px;
 }
 
 .save-button-bg {
